@@ -124,6 +124,9 @@ Bug fixes
   on Lucene 4.6 if any index segments were Lucene 4.0-4.5.
   (Littlestar, Mike McCandless, Shai Erera, Robert Muir)
 
+* SOLR-5661: PriorityQueue now refuses to allocate itself if the
+  incoming maxSize is too large (Raintung Li via Mike McCandless)
+
 API Changes
 
 * LUCENE-5339: The facet module was simplified/reworked to make the
